# gardening-app

./: .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  index.html  main.py  mkdoc_updates.md  mkdocs.yml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/commands/: setup-env.md
.github/: CONTRIBUTING.md
.github/instructions/: security-checklist.md  (+2 more)
2024-Django-Attempt/: README.md  data.json
CHANGELOG/: index.html
INDEX/: index.html
INTEGRATION/: index.html
Plants/: admin.py  models.py  urls.py  views.py
Process/: index.html
SPEC-CROSS-REFERENCE/: index.html
about/: index.html
architecture/: index.html
background/: index.html
config/: urls.py
decisions/: CESYS524_decision-matrix.xlsx  CESYS526-Interface-Matrix.xlsx  CESYS527_FMEA.xlsx
diagrams/: index.html
docs/: CHANGELOG.md  INDEX.md  INTEGRATION.md  Process.md  SPEC-CROSS-REFERENCE.md  about.md  architecture.md  index_from-mkdocs.md  scope.md  system-requirements.md
gardening-docs/: mkdocs.yml
history/: index.html
index_ORIGINAL/: index.html
index_ORIGINAL_from-mkdocs/: index.html
index_from-mkdocs/: index.html
original_experimient/: gardening.db
output-logs/: index.html
progress/: index.html
requirements/: index.html  requirements-quick-template.md
resources/: index.html
rules/: index.html
scope/: index.html
search/: search_index.json
specifications/: index.html
src/: main.py
stylesheets/: extra.css
system-requirements/: index.html
templates/: requirements-template.md  spec-template.md
tests/: test_tmp.py
(+130 files in other folders)
