[project]
name = "gardening-app"
version = "0.1.0"
description = "App for gardeners & community garden members to manage plots, tasks, and events."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.8",
    "colorama==0.4.6",
    "django>=6.0",
    "ghp-import==2.1.0",
    "jinja2==3.1.5",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "mergedeep==1.3.4",
    "mkdocs==1.6.1",
    "mkdocs-get-deps==0.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material[imaging]>=9.7.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-table-reader-plugin>=3.1.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==0.1",
    "six==1.17.0",
    "watchdog==6.0.0",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "coverage>=7.11.3",
    "flake8==7.2.0",
    "iniconfig==2.1.0",
    "markitdown>=0.1.3",
    "mccabe==0.7.0",
    "mypy-extensions==1.1.0",
    "pluggy==1.6.0",
    "pycodestyle==2.13.0",
    "pyflakes==3.3.2",
    "pygments==2.19.1",
    "pytest==8.4.0",
]

[tool.bandit]
exclude_dirs = ["2024-Django-Attempt", ".venv"]
